修复一个编译问题 修改支持的范围